fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,6 @@ span:hover {
   color: #15114c;
 }
 
-
 @media only screen and (min-width: 60em) {
 
   .logo {
@@ -41,7 +40,7 @@ span:hover {
   }
 
   .nav {
-    text-align: left;
+    text-align: right;
   }
 
 }
